update to reflect code changes

--- a/fcthesis.sty
+++ b/fcthesis.sty
@@ -88,8 +88,7 @@
 %        \vskip.5in
         
         \begin{center}
-                {Orientador: \expandafter{\@supervisor}}\\
-                {Co-orientador: \@cosupervisor}\\
+                {Supervisor: \expandafter{\@supervisor}}\\
         \end{center}
 
         \vskip.2in
