--- a/texto.tex
+++ b/texto.tex
@@ -27,13 +27,13 @@
 \begin{document}
 
 \title{Call Subsumption Mechanisms for Tabled Logic Programs}
-\submitionplace{Dissertação submetida a Faculdade de Engenharia da \\
+\submitionplace{Dissertação submetida à Faculdade de Engenharia da \\
     Universidade do Porto como parte dos requisitos para a obtenção do grau de \\
     Mestre em Engenharia Informática e de Computação}
 \department{Departamento de Engenharia Informática \\ Faculdade de
 Engenharia da Universidade do Porto}
 \author{Flávio Manuel Fernandes Cruz}
-\submitdate{\today}
+\submitdate{Junho de 2010}
 \supervisor{Ricardo Rocha}
 \beforepreface
 
