add appendix with benchmark programs

--- a/texto.tex
+++ b/texto.tex
@@ -79,6 +79,9 @@ Engenharia da Universidade do Porto}
 \chapter{Experimental Results}
 
 \chapter{Conclusions and further work}
+
+\appendix
+\input{appendix_code}
   
 \renewcommand{\bibname}{References}
 \bibliographystyle{alpha}
