add tables with results. update text to conform with new changes

--- a/texto.tex
+++ b/texto.tex
@@ -11,6 +11,7 @@
 \usepackage{cite}
 %\usepackage{verbatim}
 \usepackage{enumerate}
+\usepackage{multirow}
 \usepackage{fancyvrb}
 \usepackage{float}
 \usepackage[section]{placeins}
