--- a/tst.tex
+++ b/tst.tex
@@ -1525,7 +1525,8 @@ some variant fields are not needed.
 The consumer frame contains the following fields: \texttt{state}, the state of execution;
 \texttt{producer}, pointer to the subsumptive producer subgoal frame; \texttt{cons\_cp},
 pointer to the first consumer choice point; \texttt{first\_answer} and \texttt{last\_answer},
-as the answer return list; \texttt{ts}, the consumer time stamp; \texttt{answer\_template},
+as the answer return list; \texttt{ts}, the consumer time stamp;
+\texttt{next}, pointer to the next evaluating consumer subgoal frame; \texttt{answer\_template},
 a pointer to the answer template built on the heap; and \texttt{consumers},
 to link consumer subgoals of the producer subgoal frame.
 
@@ -1775,8 +1776,8 @@ repeated answers in future iterations. Remember that once a single consumer node
 collects newer answers, every consumer node of a subsumptive subgoal will see them, thus
 enabling sharing of answers among the consumer nodes.
 
-The dependency frame data structure was extended with the \texttt{sg\_fr} field, so it could
-be possible to run this algorithm and the completion algorithm presented in the next section.
+The dependency frame data structure was extended with the \texttt{sg\_fr} field,
+in order to run this algorithm.
 
 \begin{figure}[ht]
 \begin{Verbatim}
@@ -1811,13 +1812,13 @@ Once a generator node completes we must mark each subgoal that appears under the
 Hence, some modifications must be made to complete subsumptive consumer subgoal frames.
 
 In YapTab each variant subgoal frame is chained in a linked list during execution. The top of this list
-can be accessed by using the \texttt{LOCAL\_top\_sg\_fr} and completion is done by iterating this list until
+can be accessed by using \texttt{LOCAL\_top\_sg\_fr} and completion is done by iterating this list until
 the target subgoal frame is reached. The dependency frames that are younger than the completion point
 are also iterated and freed. 
 
-Subsumptive consumer subgoal frames are easily accessible by using the \texttt{sg\_fr} field in the dependency frames.
-Thus, to complete these subgoals, while freeing the dependency frames we check if the subgoal is a subsumptive consumer
-and is not complete.
+Subsumptive consumer subgoal frames are also chained in a linked list
+that is iterated during completion. Any subgoal frame with a consumer choice point (\texttt{cons\_cp})
+younger than the completion point is completed.
 
 Some data structures, like the time stamp indexes, are deleted during completion from the
 subsumptive producer subgoal frames.
@@ -1854,3 +1855,179 @@ case 1 and 2, as in case 2 its value is NULL. In case 1 points to the final hash
 hence it is easy to know when to remove the choice point.
 
 \section{Results}
+
+\begin{table}[ht]
+\scriptsize{
+\begin{tabular}{c|c|c|c|c|c|c|c|c}
+   \hline
+   \multirow{2}{*}{Program} & \multicolumn{2}{c|}{\multirow{2}{*}{Data}} & \multicolumn{3}{c|}{SLG-WAM} & \multicolumn{3}{c}{YapTab} \\ \cline{4-6} \cline{7-9}
+   & \multicolumn{2}{c|}{} & Variant & Subsumptive & Speedup & Variant & Subsumptive & Speedup \\ \hline
+   
+   \multirow{20}{*}{path\_left\_first} &  \multirow{6}{*}{tree} &  1024 &  10 & 0 &  $\infty$  & 0 & 0 &  $\infty$ \\
+   &  &  2048 &  0 & 10 &  0.000  & 10 & 0 &  $\infty$ \\
+   &  &  4096 &  10 & 20 &  0.500  & 10 & 10 &  1.000 \\
+   &  &  8192 &  30 & 20 &  1.500  & 30 & 30 &  1.000 \\
+   &  &  16384 &  70 & 80 &  0.875  & 70 & 90 &  0.778 \\
+   &  &  32768 &  140 & 170 &  0.824  & 150 & 170 &  0.882 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{pyramid} &  512 &  140 & 180 &  0.778  & 160 & 190 &  0.842 \\
+   &  &  1024 &  620 & 720 &  0.861  & 750 & 800 &  0.938 \\
+   &  &  2048 &  2580 & 3190 &  0.809  & 3140 & 3300 &  0.952 \\
+   &  &  4096 &  10400 & 15330 &  0.678  & 14040 & 14620 &  0.960 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{grid} &  16 &  40 & 50 &  0.800  & 30 & 40 &  0.750 \\
+   &  &  32 &  840 & 930 &  0.903  & 670 & 800 &  0.838 \\
+   &  &  64 &  14630 & 16760 &  0.873  & 11270 & 13970 &  0.807 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{chain} &  1024 &  180 & 230 &  0.783  & 190 & 220 &  0.864 \\
+   &  &  2048 &  770 & 1010 &  0.762  & 770 & 760 &  1.013 \\
+   &  &  4096 &  3100 & 4300 &  0.721  & 3090 & 3130 &  0.987 \\
+   &  &  8192 &  13860 & 29850 &  0.464  & 13240 & 14490 &  0.914 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{cycle} &  1024 &  340 & 490 &  0.694  & 400 & 420 &  0.952 \\
+   &  &  2048 &  1520 & 2020 &  0.752  & 1730 & 1670 &  1.036 \\
+   &  &  4096 &  6470 & 12010 &  0.539  & 7530 & 7390 &  1.019 \\
+   \cline{2-9}
+   \hline
+   \multirow{19}{*}{path\_right\_first} &  \multirow{6}{*}{tree} &  1024 &  10 & 0 &  $\infty$  & 10 & 0 &  $\infty$ \\
+   &  &  2048 &  10 & 10 &  1.000  & 10 & 10 &  1.000 \\
+   &  &  4096 &  20 & 20 &  1.000  & 20 & 20 &  1.000 \\
+   &  &  8192 &  30 & 30 &  1.000  & 50 & 70 &  0.714 \\
+   &  &  16384 &  90 & 90 &  1.000  & 100 & 180 &  0.556 \\
+   &  &  32768 &  190 & 200 &  0.950  & 210 & 360 &  0.583 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{pyramid} &  512 &  180 & 150 &  1.200  & 150 & 280 &  0.536 \\
+   &  &  1024 &  700 & 670 &  1.045  & 790 & 1130 &  0.699 \\
+   &  &  2048 &  2970 & 2590 &  1.147  & 3230 & 4400 &  0.734 \\
+   &  &  4096 &  11500 & CRASHED &  -  & 13590 & 17740 &  0.766 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{grid} &  16 &  70 & 70 &  1.000  & 60 & 70 &  0.857 \\
+   &  &  32 &  1280 & 1050 &  1.219  & 1050 & 1300 &  0.808 \\
+   &  &  64 &  20250 & 17300 &  1.171  & 18800 & 20570 &  0.914 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{chain} &  1024 &  210 & 180 &  1.167  & 240 & 340 &  0.706 \\
+   &  &  2048 &  780 & 790 &  0.987  & 980 & 1250 &  0.784 \\
+   &  &  4096 &  3170 & 3160 &  1.003  & 3970 & 5400 &  0.735 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{cycle} &  1024 &  440 & 520 &  0.846  & 480 & 670 &  0.716 \\
+   &  &  2048 &  1720 & 2000 &  0.860  & 2090 & 2700 &  0.774 \\
+   &  &  4096 &  6790 & 7980 &  0.851  & 8600 & 10600 &  0.811 \\
+   \cline{2-9}
+   \hline
+\end{tabular}
+}
+\end{table}
+
+\begin{table}
+\scriptsize{
+\begin{tabular}{c|c|c|c|c|c|c|c|c}
+   \hline
+   \multirow{2}{*}{Program} & \multicolumn{2}{c|}{\multirow{2}{*}{Data}} & \multicolumn{3}{c|}{SLG-WAM} & \multicolumn{3}{c}{YapTab} \\ \cline{4-6} \cline{7-9}
+   & \multicolumn{2}{c|}{} & Variant & Subsumptive & Speedup & Variant & Subsumptive & Speedup \\ \hline
+   \multirow{10}{*}{path\_double\_last} &  \multirow{6}{*}{tree} &  2048 &  30 & 30 &  1.000  & 30 & 40 &  0.750 \\
+   &  &  4096 &  70 & 70 &  1.000  & 50 & 100 &  0.500 \\
+   &  &  8192 &  150 & 170 &  0.882  & 130 & 240 &  0.542 \\
+   &  &  16384 &  370 & 450 &  0.822  & 310 & 520 &  0.596 \\
+   &  &  32768 &  920 & 1110 &  0.829  & 820 & 1410 &  0.582 \\
+   &  &  65536 &  1960 & 2930 &  0.669  & 1970 & 4260 &  0.462 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{chain} &  128 &  80 & 60 &  1.333  & 60 & 60 &  1.000 \\
+   &  &  256 &  740 & 470 &  1.574  & 480 & 460 &  1.043 \\
+   &  &  512 &  5890 & 3829 &  1.538  & 4310 & 3560 &  1.211 \\
+   &  &  1024 &  47470 & 31400 &  1.512  & 44450 & 28380 &  1.566 \\
+   \cline{2-9}
+   \hline
+   \multirow{20}{*}{path\_left\_last} &  \multirow{6}{*}{tree} &  1024 &  0 & 0 &  $\infty$  & 0 & 0 &  $\infty$ \\
+   &  &  2048 &  0 & 0 &  $\infty$  & 0 & 10 &  0.000 \\
+   &  &  4096 &  10 & 20 &  0.500  & 10 & 10 &  1.000 \\
+   &  &  8192 &  30 & 40 &  0.750  & 40 & 30 &  1.333 \\
+   &  &  16384 &  60 & 100 &  0.600  & 60 & 90 &  0.667 \\
+   &  &  32768 &  150 & 180 &  0.833  & 140 & 200 &  0.700 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{pyramid} &  512 &  150 & 190 &  0.789  & 180 & 200 &  0.900 \\
+   &  &  1024 &  640 & 760 &  0.842  & 760 & 780 &  0.974 \\
+   &  &  2048 &  2530 & 3130 &  0.808  & 3250 & 3300 &  0.985 \\
+   &  &  4096 &  10240 & 15440 &  0.663  & 13980 & 14930 &  0.936 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{grid} &  16 &  30 & 50 &  0.600  & 30 & 50 &  0.600 \\
+   &  &  32 &  840 & 960 &  0.875  & 630 & 810 &  0.778 \\
+   &  &  64 &  14310 & 16760 &  0.854  & 11850 & 13670 &  0.867 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{chain} &  1024 &  180 & 220 &  0.818  & 190 & 200 &  0.950 \\
+   &  &  2048 &  790 & 990 &  0.798  & 760 & 770 &  0.987 \\
+   &  &  4096 &  3160 & 4180 &  0.756  & 3060 & 3200 &  0.956 \\
+   &  &  8192 &  13190 & 30100 &  0.438  & 13180 & 14480 &  0.910 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{cycle} &  1024 &  370 & 510 &  0.725  & 400 & 430 &  0.930 \\
+   &  &  2048 &  1480 & 2040 &  0.725  & 1750 & 1690 &  1.036 \\
+   &  &  4096 &  6310 & 11970 &  0.527  & 7590 & 7690 &  0.987 \\
+   \cline{2-9}
+   \hline
+\end{tabular}
+}
+\end{table}
+
+\begin{table}
+\scriptsize{
+\begin{tabular}{c|c|c|c|c|c|c|c|c}
+   \hline
+   \multirow{2}{*}{Program} & \multicolumn{2}{c|}{\multirow{2}{*}{Data}} & \multicolumn{3}{c|}{SLG-WAM} & \multicolumn{3}{c}{YapTab} \\ \cline{4-6} \cline{7-9}
+   & \multicolumn{2}{c|}{} & Variant & Subsumptive & Speedup & Variant & Subsumptive & Speedup \\ \hline
+   
+   \multirow{11}{*}{sg} &  \multirow{4}{*}{tree} &  1024 &  130 & 150 &  0.867  & 100 & 160 &  0.625 \\
+   &  &  2048 &  510 & 610 &  0.836  & 350 & 590 &  0.593 \\
+   &  &  4096 &  1970 & 2480 &  0.794  & 1350 & 2520 &  0.536 \\
+   &  &  8192 &  8089 & 9590 &  0.843  & 5490 & 9710 &  0.565 \\
+   \cline{2-9}
+   &  \multirow{7}{*}{chain} &  1024 &  30 & 10 &  3.000  & 0 & 0 &  $\infty$ \\
+   &  &  2048 &  110 & 0 &  $\infty$  & 0 & 0 &  $\infty$ \\
+   &  &  4096 &  410 & 0 &  $\infty$  & 0 & 0 &  $\infty$ \\
+   &  &  8192 &  1620 & 0 &  $\infty$  & 10 & 10 &  1.000 \\
+   &  &  16384 &  6450 & 20 &  322.500  & 20 & 40 &  0.500 \\
+   &  &  32768 &  25790 & 30 &  859.667  & 50 & 80 &  0.625 \\
+   &  &  65536 &  CRASHED & 0 &  -  & 0 & 0 &  $\infty$ \\
+   \cline{2-9}
+   \hline
+   \multirow{10}{*}{genome} &  \multirow{5}{*}{tree} &  2048 &  170 & 0 &  $\infty$  & 190 & 0 &  $\infty$ \\
+   &  &  4096 &  690 & 10 &  69.000  & 710 & 0 &  $\infty$ \\
+   &  &  8192 &  2770 & 10 &  277.000  & 3000 & 10 &  300.000 \\
+   &  &  16384 &  11530 & 10 &  1153.000  & 12760 & 30 &  425.333 \\
+   &  &  32768 &  44460 & 30 &  1482.000  & 50450 & 60 &  840.833 \\
+   \cline{2-9}
+   &  \multirow{5}{*}{chain} &  1024 &  40 & 0 &  $\infty$  & 80 & 0 &  $\infty$ \\
+   &  &  2048 &  180 & 10 &  18.000  & 290 & 0 &  $\infty$ \\
+   &  &  4096 &  700 & 0 &  $\infty$  & 1190 & 0 &  $\infty$ \\
+   &  &  8192 &  2900 & 10 &  290.000  & 5430 & 10 &  543.000 \\
+   &  &  16384 &  11220 & 10 &  1122.000  & 21960 & 20 &  1098.000 \\
+   \cline{2-9}
+   \hline
+   \multirow{19}{*}{path\_right\_last} &  \multirow{6}{*}{tree} &  2048 &  10 & 10 &  1.000  & 0 & 10 &  0.000 \\
+   &  &  4096 &  20 & 20 &  1.000  & 20 & 30 &  0.667 \\
+   &  &  8192 &  20 & 50 &  0.400  & 50 & 70 &  0.714 \\
+   &  &  16384 &  80 & 130 &  0.615  & 100 & 240 &  0.417 \\
+   &  &  32768 &  190 & 410 &  0.463  & 250 & 590 &  0.424 \\
+   &  &  65536 &  410 & 1350 &  0.304  & 470 & 1740 &  0.270 \\
+   \cline{2-9}
+   &  \multirow{4}{*}{pyramid} &  512 &  190 & 170 &  1.118  & 210 & 290 &  0.724 \\
+   &  &  1024 &  780 & 650 &  1.200  & 780 & 1150 &  0.678 \\
+   &  &  2048 &  3010 & 2800 &  1.075  & 3330 & 4530 &  0.735 \\
+   &  &  4096 &  12010 & 10740 &  1.118  & 15540 & 17920 &  0.867 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{grid} &  16 &  80 & 50 &  1.600  & 60 & 70 &  0.857 \\
+   &  &  32 &  1240 & 930 &  1.333  & 1120 & 1140 &  0.982 \\
+   &  &  64 &  20390 & 14790 &  1.379  & 21890 & 17890 &  1.224 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{chain} &  1024 &  190 & 160 &  1.188  & 240 & 350 &  0.686 \\
+   &  &  2048 &  840 & 730 &  1.151  & 1010 & 1300 &  0.777 \\
+   &  &  4096 &  3260 & 3160 &  1.032  & 4530 & 5380 &  0.842 \\
+   \cline{2-9}
+   &  \multirow{3}{*}{cycle} &  1024 &  460 & 500 &  0.920  & 490 & 650 &  0.754 \\
+   &  &  2048 &  1760 & 1990 &  0.884  & 2210 & 2710 &  0.815 \\
+   &  &  4096 &  6960 & 8190 &  0.850  & 9450 & 10750 &  0.879 \\
+   \cline{2-9}
+   \hline
+\end{tabular}
+}
+\end{table}
+
+Text goes here...
